popup/popup.css
/* ... */
.not-applied .style-name,
.not-applied .actions > * {
  opacity: .25;
  transition: opacity .5s ease-in-out .25s, color .5s ease-in-out .25s;
}
.not-applied .style-name {
  opacity: .5;
}
.not-applied:hover .style-name,
.not-applied:hover .actions > * {
  opacity: 1;
}
.not-applied:hover .style-name {
  color: var(--red1);
}

/* should be the last of entry to override same-specificity selectors */
.entry:hover :not(i) {
  color: var(--hover);
}
.entry:hover i {
  color: var(--hover-icon);
}
.disabled:hover *:not(i) {
  color: var(--hover-disabled);
}

.frame-url::before {
  content: "iframe: ";
  color: lightslategray;
}

.frame .style-name {
  font-weight: normal;
}

#menu:not([hidden]) {
  display: flex;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  align-items: center;
  justify-content: center;
  z-index: 2147483647;
  background-color: rgba(0, 0, 0, 0.4);
}
#menu > div {
  background-color: var(--bg);
  border: solid 2px rgba(128, 128, 128, .5);
}
#menu > div > * {
  padding: .75em 1em .5em;
}
#menu:not(.delete) main.delete,
#menu.delete main:not(.delete) {
  display: none;
}
#menu.delete > div,
#menu.delete [data-cmd=delete] {
  border-color: #c00;
}
#menu header {
  font-weight: bold;
  background: var(--c90);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#menu.delete header {
  background: rgba(255, 0, 0, .25);
}
#menu main > * {
  display: flex;
}
#menu main > :nth-child(n + 2) {
  padding-top: .5em;
}
#menu [data-cmd="delete"]:not([data-focused-via-click]):focus {
  box-shadow: 0 0 0 1px red; /* Using box-shadow instead of the ugly outline in new Chrome */
}
#menu .enabled {
  color: var(--accent-1);
}
#menu .disabled {
  color: var(--c60);
  cursor: help;
}
#menu footer {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: .25em;
  padding-bottom: 1em;
}
#menu footer > * {
  margin: 0 .25em;
}
.non-windows #menu footer {
  direction: rtl;
  justify-content: flex-end;
}
.entry .menu-icon {
  width: 26px;
  flex-shrink: 0;
}

.regexp-problem-indicator {
  background-color: #d00;
  width: 14px;
  height: 14px;
  line-height: 15px;
  border-radius: 8px;
  margin-right: 6px;
  margin-left: 6px;
  text-align: center;
  color: white;
  font-weight: bold;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 90%;
  display: none;
}
.regexp-partial .regexp-problem-indicator {
  display: block;
}

.regexp-partial .actions,
.regexp-invalid .actions {
    order: 2;
}

#regexp-explanation {
  position: fixed;
  background-color: var(--bg);
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  right: 0;
  padding: .5rem;
  font-size: 90%;
  border-top: 2px solid var(--fg);
  border-bottom: 2px solid var(--fg);
  box-shadow: 0 0 100px var(--fg);
  display: flex;
  flex-direction: column;
  z-index: 999999;
}

#regexp-explanation > div {
  display: none;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.regexp-partial #regexp-partial,
.regexp-invalid #regexp-invalid {
  display: block;
}

#regexp-explanation > div:not(:last-child) {
  margin-bottom: .5rem;
}

i {
  pointer-events: none;
  font-size: 16px;
}

a:hover i {
  color: var(--fg);
}

/* Never shown, but can be enabled with a style */

.entry .actions > .enable,
.entry .actions > .disable {
  display: none;
}

#write-style {
  cursor: pointer;
  overflow: hidden;
}
#write-as {
  flex: 0;
}
#newStyleAsUsercss + i {
  pointer-events: auto;
  margin-left: -1px;
  color: var(--c60);
  cursor: auto;
}
#newStyleAsUsercss:checked,
#newStyleAsUsercss:checked + i {
  border-color: var(--accent-1);
  color: var(--accent-2);
}
[data-ui-theme="dark"] #newStyleAsUsercss:checked {
  border-color: var(--accent-2);
}
.write-style-link {
  text-decoration: none;
  white-space: nowrap;
}
.write-style-link:last-child {
  color: var(--c50);
  overflow: hidden;
  flex: 1 0 1ch;
  text-overflow: ellipsis;
}
.about-blank > .breadcrumbs {
  cursor: default;
}
.match:not([data-frame-id="0"]) a {
  text-decoration: none; /* not underlining iframe links until hovered to reduce visual noise */
}
.match .match {
  margin-left: .5rem;
}
#write-for-frames::before,
.match .match::before {
  content: "";
  width: .4rem;
  height: .4rem;
  margin-left: -.5rem;
  display: block;
  position: absolute;
  border-width: 1px;
  border-style: none none solid solid;
}
.dupe > .breadcrumbs {
  opacity: .5;
}
.dupe:not([data-children]) {
  display: none;
}
#write-for-frames {
  margin: 0 0 -.25em .5rem;
  color: var(--c50);
  transition: color .2s;
}
#write-for-frames:hover {
  color: var(--fg);
}
#write-style:not(.expanded) .match:not([data-frame-id="0"]),
#write-style:not(.expanded) .match .match {
  display: none;
}
.breadcrumbs {
  display: flex;
  flex-wrap: wrap;
}
.breadcrumbs:hover a {
  color: var(--c75);
  text-decoration: none
}
/* "dot" after each subdomain name except tld */
[subdomain]:nth-last-child(n + 3)::after {
  content: "."
}
/* "forward slash" before path ("this URL") */
.write-style-link:not([subdomain])::before {
  content: "\200b/"
}
/* :hover style */
.breadcrumbs.url\(\) > a,
/* :hover or :focus on "this URL" sets class="url()" */
.breadcrumbs [subdomain]:hover,
.breadcrumbs [subdomain]:focus,
.breadcrumbs [subdomain]:hover ~ [subdomain],
.breadcrumbs [subdomain]:focus ~ [subdomain] {
  color: inherit;
  text-decoration: underline;
}

/* action buttons */

#popup-options {
  --btn-gap: 4px;
  display: flex;
  flex-direction: row;
  padding: var(--outer-padding) 1px;
  margin-right: calc(-1 * var(--btn-gap));
}
#popup-options .split-btn > :first-child {
  width: calc(100% - 16px);
}
.blocked #popup-options > * > :first-child {
  width: 100%;
}
#popup-options button {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#popup-options > * {
  margin-right: var(--btn-gap);
}
/* ... */

